lagt till patch metod

--- a/02-todo/server/tasks.json
+++ b/02-todo/server/tasks.json
@@ -1,7 +1,1 @@
-[
-  { "id": 1, "title": "test", "description": "test" },
-  { "id": 2, "title": "Mata hunden" },
-  { "id": 3, "title": "test", "description": "test" },
-  { "id": 4, "title": "test", "description": "test" },
-  { "id": 5, "title": "test", "description": "test" }
-]
+[{"id":3,"title":"Ta ut hunden","description":"afjashljkfhkajf","dueDate":"2022-12-28","completed":false}]
